// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zacs doesn't add __zacs_original_name in production 1`] = `
"/* eslint-disable */
const root = <div className={style.root} />;"
`;

exports[`zacs preserves declarations if requested 1`] = `
"/* eslint-disable */
import zacs from 'zacs';
const Root = zacs.view(style.root);
const root = <div className={style.root} />;"
`;

exports[`zacs transforms experimental stylesheets (native, android) 1`] = `
"const zacsReactNative = require('react-native');

const ZACS_RN_StyleSheet = zacsReactNative.StyleSheet;

/* eslint-disable */
const styles = ZACS_RN_StyleSheet.create({
  text: {
    // magic syntax for babel replacement plugins
    backgroundColor: Styling.colors.onSurface1,
    borderWidth: 1,
    borderStyle: 'solid',
    borderColor: Styling.colors.onSurface1,
    backgroundColor: Styling.colors.onSurface2,
    borderWidth: 1,
    borderStyle: 'solid',
    borderColor: Styling.colors.onSurface2
  }
});"
`;
